[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datafev"
version = "0.0.1"
authors = [
    { name="Erdem Gümrükcü, M.Sc.", email="erdem.guemruekcue@eonerc.rwth-aachen.de" },
    { name="Amir Ahmadifar, M.Sc.", email="aahmadifar@eonerc.rwth-aachen.de" },
    { name="Aytug Yavuzer, B.Sc.", email="aytug.yavuzer@rwth-aachen.de" }
]
description = "datafev is a framework for the development, testing, and assessment of managemant algorithms for EV charging scenarios."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://git.rwth-aachen.de/acs/public/automation/datafev"
"Bug Tracker" = "https://git.rwth-aachen.de/acs/public/automation/datafev/-/issues"